# cmux

./: .dockerignore  .env.local.template  .gitattributes  .gitignore  .gitmodules  .npmrc  .tmux.conf  AGENT_DOCS.md  AUTO_PREVIEW_IMPLEMENTATION.md  CLAUDE.md  Dockerfile  Dockerfile.sh  LAUNCH.md  LICENSE  OPENAI.md  PLAN.md  README.md  SOCKET_TO_CAPNWEB_MIGRATION.md  TODOS.md  blog-post-angler-dinner-rho.md  blog-post-rho-angler-dinner.md  blog-rho-angler-dinner.md  codex-turns.jsonl  debug-electron.sh  debug-taskrun.js  debug-taskrun.mjs  debug-taskrun.ts  dev-start.sh  eslint.config.js  meaning-of-life-explorer.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt-wrapper.sh  pyproject.toml  rho-angler-dinner-blog-post.md  startup.sh  test-terminal-logging.md  tsconfig.app.json  (+3 more)
.devcontainer/: Dockerfile  dev.sh  devcontainer.json  docker-compose.convex.yml  docker-compose.devcontainer.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: build.yml  checks.yml  docker-build-test.yml  docker-publish-dockerhub.yml  docker-publish.yml  lint.yml  release-electron.yml  release-updates.yml  rust.yml  test-cmux.yml  tests.yml
apps/client/: .gitignore  AUTO_UPDATE_README.md  ELECTRON_AUTOUPDATES.md  build-linux.sh  build-mac-workaround.sh  deps.json  electron-builder.json  electron-loader.mjs  electron-vite-plugin-resolve-workspace.js  electron-vite-plugin-resolve-workspace.ts  electron.vite.config.1757453793222.mjs  electron.vite.config.js  electron.vite.config.test.ts  electron.vite.config.ts  generate-icons.sh  index.html  package.json  publish-mac-run-workaround.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/cmux-proxy/: .dockerignore  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
apps/edge-router/: wrangler.toml
apps/edge-router-gcp/: .dockerignore  Dockerfile  README.md  deploy-gcp.sh  docker-compose.yml  nginx.conf  package.json  tsconfig.json
apps/global-proxy/: Cargo.toml  Dockerfile  cloudbuild.yaml
apps/landing/: README.md  package.json  tsconfig.tsbuildinfo
apps/preview-proxy/: .gitignore  README.md  build-comments.ts  package.json  test-comments.html
apps/preview-service/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/server/: SERVER_HANDLERS_ANALYSIS.md  package-lock.json  package.json  tsconfig.json
apps/server-global/: .gitignore  README.md  package.json  tsconfig.json  vercel.json
apps/worker/: AUTO_PREVIEW.md  Dockerfile  Dockerfile1  README.md  package.json  start-up.sh  test-all.mjs  test-auto-preview.ts  test-docker-in-worker.mjs  test-worker.mjs  tsconfig.json  vitest.config.ts
apps/www/: README.md  eslint.config.js  eslint.config.mjs  middleware.ts  (+5 more)
blog/: rho-angler-dinner.md
cmux/: __init__.py  cli.py
cmux.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: envctl.sh  tmux-on-attach.sh  tmux.conf
convex/: gitActions.ts  github.ts  githubActions.ts  schema.ts  taskActions.ts  taskRunActions.ts  taskRuns.ts  tasks.ts
crates/cmux-novnc-proxy/: Cargo.toml
crates/cmux-novnc-proxy/src/: lib.rs  main.rs
crates/cmux-novnc-proxy/tests/: proxy.rs
crates/vnc-websocket-proxy/: CHANGELOG.md  Cargo.toml  README.md
crates/vnc-websocket-proxy/src/: main.rs
crates/vnc-websocket-proxy/tests/: integration_test.rs
crates/vnc-ws-proxy/: Cargo.toml
crates/vnc-ws-proxy/src/: main.rs
crates/vnc-ws-proxy/tests/: integration.rs
docs/: docker-public-access.md
docs-ai/: hono-openapi.md
prompts/: codex-header-proxy.md  dev-sandbox.md  environment-versions-0.md  prompt0.md  vscode-morph.md
scripts/: _port-clean.sh  build-cli.sh  build-cli.ts  build-electron-local.sh  build-electron-prod.sh  build-local-mac-arm64-signed.sh  build-local-mac-arm64.sh  build-mac-complete.sh  build-prod-mac-arm64-no-notarize.sh  build-prod-mac-arm64.sh  build-prod-mac-x64.sh  build-push-daytona.sh  bump-version.sh  cdp_console.py  check.ts  clean.sh  cli-idle.ts  copy-agent-docs.js  daytona-snapshot.ts  daytona-worker.ts  debug-start-sandbox.ts  dev-cli.sh  dev-container.sh  dev-enhanced.sh  dev-tmux.sh  dev-with-tmux.sh  dev.sh  docker-build-multiplatform.sh  docker-build.sh  docker-local-sanity-check.sh  docker-push-simple.sh  docker-push.sh  docker-shell.sh  dockerfile-parser.ts  dockerfile_to_bash.py  freestyle-fork.ts  freestyle-new-resize.ts  freestyle-new.ts  freestyle-optimize.ts  freestyle-resize.ts  (+78 more)
server/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  antd-overrides.css  index.css  main.tsx  providers.tsx  query-client.ts  routeTree.gen.ts
(+1978 files in other folders)
