[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmux"
version = "0.2.21"
description = "Open source Claude Code manager that supports Codex/Gemini/OpenCode/Amp CLI"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "morphcloud>=0.1.79",
    "requests>=2.32.4",
]
keywords = [
    "Claude Code", "Codex", "Gemini", "OpenCode", "Claude Opus", 
    "Claude Sonnet", "Coding CLI", "multiplexer", "Grok", "Amp", 
    "Qwen", "Rovo", "tmux"
]
authors = [{name = "Manaflow"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/lawrencecchen/cmux"
Repository = "https://github.com/lawrencecchen/cmux"

[project.scripts]
cmux = "cmux.cli:main"

[tool.setuptools.packages.find]
include = ["cmux*"]
