[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmux"
version = "0.1.0"
description = "Open source Claude Code manager that supports Codex/Gemini/OpenCode/Amp CLI"
readme = "README.md"
requires-python = ">=3.8.0"
license = {text = "MIT"}
authors = [
    {name = "Manaflow", email = "hello@manaflow.ai"},
]
keywords = [
    "Claude Code",
    "Codex", 
    "Gemini",
    "OpenCode",
    "Claude Opus",
    "Claude Sonnet",
    "Coding CLI",
    "multiplexer",
    "Grok",
    "Amp",
    "Qwen",
    "Rovo",
    "tmux",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/lawrencecchen/cmux"
Repository = "https://github.com/lawrencecchen/cmux"
Documentation = "https://github.com/lawrencecchen/cmux#readme"

[project.scripts]
cmux = "cmux.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python-package/cmux"]
