[package]
name = "cmux-novnc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "sync", "signal"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp", "runtime", "stream"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-util = "0.3"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "sync", "signal", "time"] }
tokio-tungstenite = "0.21"
hyper = { version = "0.14", features = ["client", "http1", "runtime", "tcp"] }
futures-util = "0.3"
tempfile = "3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
