[package]
name = "vnc-ws-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vnc-ws-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
